# Bharathi

./: README.md  next.config.ts  package-lock.json  package.json  proxy.ts  pyproject.toml  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/_components/Landing/: Header.tsx  Hero.tsx
app/api/agent/: route.ts
app/api/bharathi-agent/: route.ts
app/api/company-agent/: route.ts
app/api/inngest/: route.ts
app/api/user-agent/: route.ts
app/call/: page.tsx
app/call/_components/: CallPageClient.tsx  CallerForm.tsx  TalkToAgent.tsx
app/context/: page.tsx
app/context/_components/: ContextPage.tsx
app/dashboard/: page.tsx
app/dashboard/_components/: Company-overview.tsx  Dashboard-header.tsx  DashboardClient.tsx  DashboardPage.tsx  Interactions-chat.tsx  Messages-list.tsx  (+4 more)
app/login/: page.tsx
app/register/: page.tsx
app/stocks/: page.tsx
app/test/: page.tsx
backend/: contextGen.py  imageGen.py  main.py
components/: ConfigurationDialog.tsx  Navbar.tsx
components/ui/: file-dropzone.tsx
db/: index.ts  relations.ts  schema.ts
drizzle/: 0000_mature_lightspeed.sql  relations.ts  schema.ts
drizzle/meta/: 0000_snapshot.json  _journal.json
inngest/: client.ts  functions.ts
lib/: auth-client.ts  auth.ts  generate-audio.ts  mailer.ts  mandi.ts  media-type.ts  prompts.ts
lib/hooks/: use-debounce.ts
platform/facebook/: core.ts  graphapi.ts
platform/instagram/: core.ts  graphapi.ts
trpc/: init.ts  query-client.ts  server.ts
trpc/routers/: _app.ts  agent.ts  call.ts  company.ts  context.ts  dashboard.ts  social.ts  upload.ts
(+6 files in other folders)
