[project]
name = "bharathi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.133.1",
    "google-generativeai>=0.8.6",
    "langchain-google-genai>=4.2.1",
    "langchain-text-splitters>=1.1.1",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "supabase>=2.28.0",
    "uvicorn>=0.41.0",
]
